[modify] progress backup

--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -20,15 +20,15 @@
     "intro": "絕緣材料,導電布等材料供應商"
   },
   "index": {
-    "intro": "<b>俐元企業股份有限公司</b>創立於西元1987年九月，早期從事紅殼紙、電木板、絕緣紙、Mylar、Film、Nomex、銅箔片(捲)…等加工，目前也已擴展至EMI防制產品。因重視客戶的需求與服務，近年來致力研發最新技術、增加機械設備，加強生產電子、通訊、電腦及週邊…等各類科技產品之絕緣材料，提供各式各樣高品質的產品，並使用雷射機台打樣以服務客戶。",
-    "feature1": "創新技術",
-    "feature1_subtitle": "Innovative <br/> technology",
-    "feature2": "應用領域合作",
-    "feature2_subtitle": "Cooperation <br/> in application fields",
-    "feature3": "客製化服務",
-    "feature3_subtitle": "Customized service",
-    "feature4": "創造附加價值",
-    "feature4_subtitle": "Create added value",
+    "intro": "<span class='h4'>遠龍不銹鋼</span>股份有限公司成立於2005年，隸屬遠東集團所有，為冷軋不銹鋼供應商年產能13萬噸，產品銷售全球40餘國。 遠龍以台灣為基地，於全球金屬加工業市場中展現傲人實力。遠龍全面執行品質管理系統，落實持續改善的精神，不斷提升品質與生產力，產品深獲顧客信賴與肯定。遠龍不銹鋼以2050年達到淨零排放為目標，透過各項能源管理措施，以實際行動做好節約減碳，讓公司逐步邁向成為低碳的綠色企業，為地球永續盡一份心力。",
+    "feature1": "價值傳承",
+    "feature1_subtitle": "Value inheritance",
+    "feature2": "幸福職安",
+    "feature2_subtitle": "Occupational <br/> safety and health",
+    "feature3": "卓越製造",
+    "feature3_subtitle": "Manufacturing <br/> excellence",
+    "feature4": "綠色使命",
+    "feature4_subtitle": "Energy and <br/>  environmental protection",
     "application":{
       "intro": "俐元不斷地創新技術並積極研發，生產高品質的絕緣材料、導電布、導電布泡棉、泡棉、防火膠帶、吸波材及導電銅箔…等， 並增添最新科技的生產設備，生產一系列規格精確、超高品質、使用便利的產品，於業界建立良好信譽。",
       "product1": "電子通訊",
