--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -12,12 +12,12 @@
     "tradeService": "貿易服務"
   },
   "footer": {
-    "address": "238新北市樹林區三龍街20-1號",
-    "phone": "02-8688-8680",
-    "fax": "02-8688-8678",
-    "email": "{'sale121@liyun.com.tw'}",
-    "company": "俐元企業股份有限公司",
-    "intro": "絕緣材料,導電布等材料供應商"
+    "address": "高雄市812小港區大業南路28號",
+    "phone": "+886-7-975-7988",
+    "fax": "+886-7-975-7986",
+    "email": "{'sales@ylss.com.tw'}",
+    "company": "遠龍不銹鋼股份有限公司",
+    "intro": "Yuan long stainless steel corp."
   },
   "index": {
     "intro": "<span class='h4'>遠龍不銹鋼</span>股份有限公司成立於2005年，隸屬遠東集團所有，為冷軋不銹鋼供應商年產能13萬噸，產品銷售全球40餘國。 遠龍以台灣為基地，於全球金屬加工業市場中展現傲人實力。遠龍全面執行品質管理系統，落實持續改善的精神，不斷提升品質與生產力，產品深獲顧客信賴與肯定。遠龍不銹鋼以2050年達到淨零排放為目標，透過各項能源管理措施，以實際行動做好節約減碳，讓公司逐步邁向成為低碳的綠色企業，為地球永續盡一份心力。",
