--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -47,80 +47,36 @@
     "removeAskPrice": "移除詢價清單"
   },
   "company": {
+    "title": "關於遠龍",
+    "managePolicy": {
+      "title": "經營方針",
+      "phase1": "/assets/img/company_intro_left.webp",
+      "phase2": "/assets/img/company_intro_right.webp"
+    },
     "companyIntro": {
-      "title": "關於俐元",
-      "phase1": "成立於1987年，俐元企業為業界領先之輔材及耗材設計、製造廠商。為電子、電機及其他各大產業提供完整的複合材導電、絕緣解決方案。",
-      "phase2": "俐元企業傾聽客戶的需求，持續創新技術並積極研發，提供多樣化的導電、絕緣產品，為電子通訊、網通、工業電腦、POS、車用電子、車載、能源、電池、醫療、半導體及其他各大產業提供最理想的導電/絕緣選擇。"
+      "title": "關於遠龍",
+      "phase1": "遠龍不銹鋼股份有限公司成立於2005年，座落於台灣高雄，隸屬遠東集團所有，為冷軋不銹鋼供應商，年產能13萬噸，產品銷售世界四十餘國。<br/>遠龍不銹鋼全面執行品質管理系統，落實持續改善的精神，不斷提升品質與生產力，產品深獲顧客信賴與肯定。<br/>遠龍不銹鋼以2050年達到淨零排放為目標，透過各項能源管理措施，以實際行動做好節約減碳，讓公司逐步邁向成為低碳的綠色企業，為地球永續盡一份心力。"
     },
-    "companyPhliosophy": {
-      "title": "經營理念",
-      "phase1": "俐元不斷地創新技術並積極研發，生產高品質的絕緣材料、導電布、導電布泡棉、泡棉、防火膠帶、吸波材及導電銅箔…等，並增添最新科技的生產設備，生產一系列規格精確、超高品質、使用便利的產品，於業界建立良好信譽。"
+    "coreValue":{
+      "title": "核心價值",
+      "phase1": "始終秉持集團價值觀「誠、勤、樸、慎、創新」，以精湛技藝與態度在企業永續的道路上不懈努力，展現人本、信賴、務實、創新的核心價值。<br/>1.人本-重視員工需求與發展,善盡企業社會責任。<br/>2.信賴-成為客戶值得信賴的夥伴,成就彼此的成功。<br/>3.務實-腳踏實地,堅持到底,專注過程,做好每件事。<br/>4.創新-跨領域學習,勇於突破,持續改善,提升品質。"
     },
-    "companyValue": {
-      "title": "為客戶創造更高的附加價值",
-      "phase1": "在俐元的網站中，您可以找到所需要的相關產品，並且接受客戶委託代其規劃設計特殊規格及特性之產品，俐元已取得ISO9001認證，產品符合RoHS、REACH及UL規範。若需國外特殊材料，或有任何問題，歡迎隨時與我們聯絡。"
+    "view":{
+      "title": "使命願景",
+      "phase1": "<p>以「製造高品質低碳排的冷軋不銹鋼」為使命，「成為業界首選，綠色低碳冷軋不銹鋼供應商」為願景。</p>"
     },
-    "companyProduct": {
-      "phase1": "",
-      "phase2": {
-        "title": "UL94VTM-0防火膠帶",
-        "content": "本公司專業生產之特殊UL防火膠帶，均通過美國UL認可，耐溶劑佳、熱硬化感壓膠適用各種電子、電器零組件檔牆及絕緣用，顏色齊全。"
-      },
-      "phase3": {
-        "title": "特殊絕緣材料、發泡材料",
-        "content": "絕緣材料及發泡材料適用於電源供應器、磁碟機、TV/監視器、PC板、Note Book商務機器之貼合、絕緣及EMI防制等運用。"
-      },
-      "phase4": {
-        "title": "導電材料、導電布、導電銅(鋁)箔",
-        "content": "銅箔、鋁箔、合金銅、導電布、導電泡棉、導電膠等。"
-      },
-      "phase5": {
-        "title": "UL認證電子、電器專用之絕緣材料設計、製造",
-        "content": ""
-      },
-      "phase6": {
-        "title": "銅(鋁)箔背膠加工、製造",
-        "content": ""
-      },
-      "phase7": {
-        "title": "ABSORBER吸波材",
-        "content": "無線高頻時代來臨，EMC及防止RF內部干擾最佳對策品"
-      },
-      "phase8": {
-        "title": "金屬導電天線、EMI、鎳片包覆產品",
-        "content": "鋁箔、銅箔、合金銅、鎳片。"
-      }
-    },
-    "rba": {
-      "title": "RBA",
-      "content": "責任商業聯盟行為準則 V6.0 Responsible Business Alliance Code of Conduct v6.0 責任商業聯盟 ( Responsible Business Alliance, 簡稱 RBA ) (前身為電子行業公民聯盟 ( Electronic Industry Citizenship Coalition, 簡稱 EICC ) 行為準則為電子行業或電子為主要組成部分的行業及其供應鏈制定一套規範,從而確保工作環境的安全工人受到尊重並付有尊嚴商業營運合乎環保性質並遵守道德操守,涵蓋的規範為:"
-    },
-    "workerPolicy": {
-      "title": "勞工政策",
-      "content": "俐元企業在入職前會進行「員工宣導」並明確宣示保護員工人權，包含從基本的遵守法規要求、就業自由、人道待遇、禁止不當歧視與性騷擾，並建立多元有效的溝通機制、健全薪資福利、提供多元的訓練發展機會，提倡就業自由，所有的工作都是自願性的。 依據「勞動基準法」規定雇主不得僱用未滿15歲人員，嚴禁雇用未滿法定最低就業年齡之童工，並確保未成年員工之身心健康與安全及禁止安排危險性或有害性的工作。俐元企業勞工政策內，明定禁止使用童工，確保絕無雇用未滿法定最低就業年齡之童工，並確保未成年員工之身心健康與安全，禁止安排危險性之工作。針對在職員工，會進行年度培訓，並於公司網站及內部信箱等宣導，確保同仁能確實了解RBA政策內容與精神。"
-    },
-    "moralPolicy": {
-      "title": "道德政策",
-      "content": "俐元企業於所有員工不得從事任何違法之商業行為，並應嚴守迴避利益衝突之原則，且禁止接受一切私人的佣金、回扣或其他顯然不相當之各種形式之利益。"
-    },
-    "enviromentPolicy": {
-      "title": "環安衛政策",
-      "phase1": "◆ 善用材料，節能減廢，降低污染對環境之衝擊。",
-      "phase2": "◆ 尊重生命，風險管控，降低危害對人員之衝擊，持續改善。",
-      "phase3": "◆ 符合法規，配合環安衛政策之推動。",
-      "phase4": "◆ 加強宣導，預防污染，落實管理系統之執行。",
-      "phase5": "◆ 貫徹訓練，安全視察，養成安全衛生環境之職場。",
-      "phase6": "◆ 全員參與，永續經營，達到環保、安全與經濟三贏之目標。",
-      "phase7": "俐元企業持續不斷的努力推行環境管理，營造健康舒適的工作環境。"
-    },
-    "moralMineral": {
-      "title": "無使用衝突礦產政策",
-      "content": "衝突礦產，是指錫 （Sn），鉭（Ta），鎢（W），金（Au） 來自於剛果民主共和國或鄰近國家衝突區域之礦區。 由於該衝突區域被非政府武裝團體所控制，進行非法採礦且造成侵犯人權。俐元企業承諾所有產品之來源沒有來自剛果及其周邊國家,以及這些國家內任何武裝力量控制區之衝突礦產。 並要求供應商簽署「衝突礦產調查模板 ( CMRT ) 」、「衝突金屬來源調查表及不使用衝突金屬宣告書」、「供應商承包商RBA承諾書」進行調查，原物料中禁止使用衝突礦產,以滿足來自客戶及法律法規的要求。"
-    },
-    "hsf": {
-      "title": "HSF政策",
-      "content": "俐元企業推動綠色採購、保護地球、符合客戶及法律法規要求、持續改善。"
+    "contact": {
+      "title": "遠龍不銹鋼股份有限公司",
+      "phase1": "業務類型：OEM製造商出口商/代理批發商增值經銷商",
+      "phase2": "主要產品: 300 及 400系列不銹鋼",
+      "phase3": "ISO和/或其他安全/質量認證：ISO 9001、ISO 50001、ISO 45001、ISO 14001、ISO 14064、ISO 14067、CNS 45001、ISO/IEC 17025、IATF 16949、JQA JIS G4305、BIS IS 6911"
     }
+  },
+  "quality":{
+    "title": "品質政策"
+  },
+  "cert":{
+    "title": "標準認證"
   },
   "contact": {
     "heading": "如果您有任何問題或建議，歡迎填寫以下表格聯繫我們。",
@@ -137,5 +93,8 @@
     "close": "關閉",
     "isSending": "訊息送出中",
     "askingPriceEmpty": "您可以在產品介紹頁面裡找到你想詢價的產品，並且加入詢價表單與我們聯絡。"
+  },
+  "common": {
+    "openMenu": "開啟分類選單"
   }
 }
