--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -73,10 +73,44 @@
     }
   },
   "quality":{
-    "title": "品質政策"
+    "title": "品質政策",
+    "cert": {
+      "title": "ISO 9001、JIS mark及IATF 16949 品質政策",
+      "phase1": "在秉持品質政策的意念下，我們全面執行ISO 9001品質管理系統、JIS Q1001符合性評估 - 符合日本產業標準的認證 – 一般認證指引及IATF 16949汽車業品質管理系統等相關作業標準來架構品質管理系統。提升不銹鋼專業能力及服務品質，並秉持持續改善精神提升品質與生產力，達到顧客滿意的水準。我們承諾會依據品質政策建立品質目標，並在符合顧客及法令要求基礎下，進行各項改善措施以持續改善品質管理系統。"
+    },
+    "policy": {
+      "title": "ISO 9001品質管理系統/IATF 16949汽車認證系統品質政策",
+      "phase1": "/assets/img/quality_left.webp",
+      "phase2": "/assets/img/quality_right.webp"
+    },
+    "lab": {
+      "title": "實驗室品質政策",
+      "phase1": "在秉持品質政策的意念下，我們全面執行ISO 9001及ISO/IEC 17025 品質管理系統。提升不銹鋼專業能力及服務品質，並秉持持續改善精神提升品質與生產力，達到顧客滿意的水準。我們承諾會建立品質政策建立品質目標，並在符合顧客及法令要求基礎下，進行各項改善措施以持續改善品質管理系統。",
+      "phase2": "ISO/IEC 17025 遠龍實驗室(編號：3537) 品質政策：以公正、獨立、透明的原則，提供有效率及信賴的測試服務。"
+    }
   },
   "cert":{
-    "title": "標準認證"
+    "title": "標準認證",
+    "lists": {
+      "title": "國際標準品質認證",
+      "phase1": "遠龍在產品品質上展現堅持，製造符合 ISO、JIS、EN、ASTM 及 CNS 等國際標準製程產品。遠龍更擁有專屬的品檢實驗室，定期接受 TAF 認證合格，透過產品自檢確保一致性的品質水準。",
+      "iso9001": "ISO 9001  2015版(20240426-20270425)_品質管理系統",
+      "iso5001": "ISO 50001 2018版(20201118-20231118)_能源管理系統",
+      "iso45001": "ISO 45001  2018版(20220729-20250708)_職業安全衛生管理系統",
+      "cns45001_1": "TOSHMS   CNS 45001：2018(1110729-1140707)_台灣職業衛生管理系統",
+      "cns45001_2": "TOSHMS   CNS 45001：2018(1110729-1140707)_台灣職業衛生管理系統",
+      "iso14001": "ISO 14001  2015版(20220729-20250721)_環境管理系統",
+      "iso14064": "ISO 14064-1 2018版(20220810)溫室氣體查驗聲明書",
+      "iso14067": "ISO 14067 2018版(20230306-20250305)碳足跡查證聲明書",
+      "iso17025": "ISO/IEC 17025：2017；CNS17025：2018 實驗室認證證書",
+      "iatf16949": "IATF 16949 2016版(20240426-20270425)_汽車品質管理系統驗證",
+      "bis-is-6911": "BIS IS 6911",
+      "cns8499": "CNS 8499",
+      "jis4305": "JQA JIS G 4305",
+      "cns17025": "ISO/IEC 17025：2017；CNS17025：2018 實驗室認證證書",
+      "iso14046_ch": "ISO 14046(2014版)-中文",
+      "iso14046_en": "ISO 14046(2014版)-英文"
+    }
   },
   "contact": {
     "heading": "如果您有任何問題或建議，歡迎填寫以下表格聯繫我們。",
