[modify] chinese finished

--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -149,6 +149,60 @@
       "iso14046_en": "ISO 14046(2014版)-英文"
     }
   },
+  "recurit": {
+    "title": "人才招募",
+    "coreValues": {
+      "title": "公司核心價值",
+      "content": "我們秉持合作、誠信、專業、當責的核心價值，致力於在每一個環節中提供卓越的服務。"
+    },
+    "teamwork": {
+      "title": "團隊合作",
+      "content": "在我們的公司，每位成員都是團隊的一部分。我們鼓勵相互支持與交流，共同面對挑戰"
+    },
+    "inclusiveEnvironment": {
+      "title": "包容性環境",
+      "content": "我們重視多樣性，努力營造一個包容的工作環境。歡迎不同背景與觀點的人才來到我們的團隊。"
+    },
+    "personalGrowth": {
+      "title": "個人成長",
+      "content": "我們相信優秀的人才是公司最重要的資產。提供多樣的培訓課程與明確的晉升管道，幫助每位成員在職業上不斷成長。"
+    },
+    "workLifeBalance": {
+      "title": "工作生活平衡",
+      "content": "彈性工作時間，支持工作與生活的平衡。"
+    },
+    "joinUs": {
+      "title": "加入我們",
+      "content": "如果您想成為這個充滿活力和多元化的團隊一員，現在就加入我們！請主動投履歷。"
+    },
+    "benefits": {
+      "title": "員工福利",
+      "salary": {
+        "title": "薪資獎金制度",
+        "content1": "保障年薪約14.5個月(全薪計算)：中秋節獎金(半薪)、端午獎金(半薪)、年終加考勤獎金(約1.5個月)。",
+        "content2": "非固定獎金：產銷獎金、產銷保留獎金。",
+        "content3": "考核獎金：每年考核一次，提供完善的升遷考核制度。"
+      },
+      "welfare": {
+        "title": "職工福利委員會",
+        "content1": "禮券發放：四節禮券(春節、勞動節、端午、中秋)、生日禮券、每年結餘禮券發放回饋。",
+        "content2": "補助費用：婚喪喜慶補助、子女教育補助、旅遊補助、急難救助補助。"
+      },
+      "companyBenefits": {
+        "title": "公司福利項目",
+        "content": "員工健康檢查、提供員工制服、提供員工廠內停車位(免費)、親子旅遊活動、員工旅遊、讀書會、社團活動、聖誕活動(移工同樂會)、尾牙活動、員工榮退歡送會。"
+      },
+      "insurance": {
+        "title": "員工保險",
+        "content": "勞健保、職保、團保、勞退提撥。"
+      },
+      "training": {
+        "title": "教育訓練",
+        "content": "新進人員訓練、職能訓練、通識教育、OJT教育訓練。"
+      }
+    },
+    "viewJobs": "檢視人力資源需求"
+  },
   "contact": {
     "heading": "如果您有任何問題或建議，歡迎填寫以下表格聯繫我們。",
     "title": "聯絡詢價",
