--- a/src/locales/eng.json
+++ b/src/locales/eng.json
@@ -1,135 +1,226 @@
 {
   "header": {
     "index": "Home",
-    "companyIntro": "About",
+    "companyIntro": "Company Introduction",
     "product": "Products",
-    "applied": "Application",
-    "contact": "Contact Us"
+    "productSpec": "Product Specifications",
+    "techEquipment": "Technology & Equipment",
+    "news": "News",
+    "sustainability": "Sustainability",
+    "contact": "Contact Us",
+    "recruitment": "Recruitment",
+    "tradeService": "Trade Services"
   },
   "footer": {
-    "address": "No. 20-1, Sanlong Street, Shulin District, New Taipei City 238, Taiwan",
-    "phone": "02-8688-8680",
-    "fax": "02-8688-8678",
-    "email": "{'sale121@liyun.com.tw'}",
-    "company": "Liyun Enterprise Co., Ltd.",
-    "intro": "Supplier of insulation materials, conductive fabrics, etc."
+    "address": "No. 28, Daye S. Rd., Xiaogang Dist., Kaohsiung City 812, Taiwan (R.O.C.)",
+    "phone": "+886-7-975-7988",
+    "fax": "+886-7-975-7986",
+    "email": "{'sales@ylss.com.tw'}",
+    "company": "Yuan Long Stainless Steel Corp.",
+    "intro": "Yuan Long Stainless Steel Corp."
   },
   "index": {
-    "intro": "<span class='h5'>Yuan Long Stainless Steel</span> Co., Ltd. was established in 2005, owned by the Far Eastern Group, with an annual production capacity of 130,000 tons of cold-rolled stainless steel, and products sold to over 40 countries worldwide.<br> ➤ With Taiwan as its base, Yuan Long demonstrates impressive strength in the global metal processing industry market.<br>➤ Yuan Long fully implements a quality management system, embodying the spirit of continuous improvement, constantly enhancing quality and productivity, with products deeply trusted and recognized by customers.<br> ➤ Yuan Long aims to achieve net-zero emissions by 2050, implementing various energy management measures to take practical actions in energy conservation and carbon reduction, contributing to the sustainability of the planet.",
-    "feature1": "Innovative Technology",
-    "feature1_subtitle": "Innovative <br/> technology",
-    "feature2": "Collaboration in Application Fields",
-    "feature2_subtitle": "Cooperation <br/> in application fields",
-    "feature3": "Customized Service",
-    "feature3_subtitle": "Customized service",
-    "feature4": "Creating Added Value",
-    "feature4_subtitle": "Create added value",
-    "application": {
-      "intro": "Liyun constantly innovates technology and actively researches and develops high-quality insulation materials, conductive fabrics, conductive fabric foam, foam, fireproof adhesive tapes, absorbing materials, and conductive copper foil, etc. It adds the latest technology production equipment to produce a series of precise specifications, ultra-high quality, and user-friendly products, establishing a good reputation in the industry.",
-      "product1": "Electronic Communication",
-      "product2": "Battery",
-      "product3": "Medical",
-      "product4": "Networking",
-      "product5": "Automotive",
-      "product6": "Semiconductor",
-      "product7": "Computer",
-      "product8": "POS"
+    "intro": "<span class='h5'>Yuan Long Stainless Steel</span> Corporation, established in 2005, is a subsidiary of the Far Eastern Group. As a cold-rolled stainless steel supplier with an annual production capacity of 130,000 tons, our products are sold to over 40 countries worldwide.<br> ➤ With Taiwan as its base, Yuan Long demonstrates impressive strength in the global metal processing industry market.<br>➤ Yuan Long fully implements a quality management system, embodying the spirit of continuous improvement, constantly enhancing quality and productivity. Our products have earned the trust and recognition of customers.<br> ➤ Yuan Long aims to achieve net-zero emissions by 2050. Through various energy management measures, we take practical actions to conserve energy and reduce carbon emissions, contributing to the sustainability of our planet.",
+    "feature1": "Value Inheritance",
+    "feature1_subtitle": "Value inheritance",
+    "feature2": "Occupational Safety and Health",
+    "feature2_subtitle": "Occupational <br/> safety and health",
+    "feature3": "Manufacturing Excellence",
+    "feature3_subtitle": "Manufacturing <br/> excellence",
+    "feature4": "Green Mission",
+    "feature4_subtitle": "Energy and <br/>  environmental protection",
+    "feature5": {
+      "title": "Yuan Long Cares About Green Mission",
+      "content_1": "Yuan Long is committed to building a green constitution from the inside out",
+      "content_2": "Adopting ISO 50001 energy management system and EU-certified renewable energy",
+      "content_3": "Prioritizing the procurement of green eco-labeled raw materials and using recycled materials for packaging",
+      "content_4": "Aiming to achieve net-zero emissions by 2050, realizing the vision of sustainable corporate development"
+    },
+    "feature6": {
+      "title": "ISO 9001, JIS mark and IATF 16949 Quality Policy",
+      "content_1": "We fully implement the relevant operational standards of ISO 9001, JIS Q1001, and IATF 16949 to structure our quality management system, enhancing our professional capabilities in stainless steel and service quality. We embody the spirit of continuous improvement to enhance quality and productivity, achieving customer satisfaction. We commit to establishing quality objectives based on our quality policy and, while meeting customer and legal requirements, implementing various improvement measures to continuously enhance our quality management system.",
+      "btn": "Learn More"
     }
   },
-  "product": {
+  "product":{
+    "title": "Products",
     "addAskPrice": "Add to Inquiry List",
     "removeAskPrice": "Remove from Inquiry List"
   },
-  "company": {
-    "companyIntro": {
-      "title": "Company Introduction",
-      "phase1": "Founded in 1987, as a world leading Auxiliary materials、consumables designer and manufacturer, ，<b>Li Yun Enterprise Co., Ltd.</b> is committed to providing Insulation 、 Conductive total solutions for electronic 、 electrical and other major industries. ",
-      "phase2": "Listening to the needs of customers, <b>Li Yun Enterprise</b> is doing research and the most advanced technologies continuously and providing a variety of conductive、insulating products for variety industries. They include, but are not limited to: electronic communications、network communications、 industrial computers、POS、automotive electronics、vehicles, energy、battery、medical、semiconductor, etc. "
+  "spec": {
+    "title": "Product Specifications"
+  },
+  "tech":{
+    "title": "Professional Technology",
+    "phase1": "Yuan Long possesses core equipment for the cold rolling process of stainless steel, as well as professional capabilities in rewinding, slitting, cutting, and inspection. We also have slitting machines to meet customer orders for different widths.",
+    "phase2": "/assets/img/tech_content.webp"
+  },
+  "equip":{
+    "title": "核心設備",
+    "zm1": {
+      "title": "二十重式冷軋機(ZM1)",
+      "phase1": "20-High Cold Rolling Mill",
+      "phase2": "為將熱軋鋼捲利用冷軋技術軋延至厚度0.25~1.5mm， 並提高平坦度及亮度。"
     },
-    "companyPhliosophy": {
-      "title": "Business Philosophy",
-      "phase1": "LI YUN ENTERPRISE is doing research and the most advanced technologies continuously, upgrade the equipment as well. Then, we manufacture Insulation Materials、Conductive Fabric、EMI Shielding Gasket、Sponge、Fire Barrier Tape、Absorber and conductive Copper Foil that with exact specification、the high quality also easy to use. Build up the reputation in Field."
+    "ba": {
+      "title": "光輝退火線(BA)",
+      "phase1": "Bright Annealing Line",
+      "phase2": "為將經軋研後之硬質鋼捲退火,使其晶粒成長而軟化而具被加工性。"
     },
-    "companyValue": {
-      "title": "Create Higher Added Value for Customers",
-      "phase1": "LI YUN ENTERPRISE is an ISO 9001 qualified manufacturer. You may find the product you need in our website. Also, we focus on the Custom-made product with special design/specification/properties/material and our product compliance RoHS、REACH and UL. If you have any questions, welcome to contact us in anytime."
+    "spl": {
+      "title": "調質精軋機(SPL)",
+      "phase1": "Skin Pass Mill",
+      "phase2": "為進行鋼捲調質作業,提昇產品亮度與加工性。"
     },
-    "companyProduct": {
-      "phase1": "Liyun Enterprise Co., Ltd. produces a series of precise specifications, high-quality products. And with the latest technology production equipment, we can accept customer commissions to design and manufacture products with special specifications and characteristics.",
-      "phase2": {
-        "title": "UL Fire Barrier Tape compliant UL94 VTM-0",
-        "content": "UL Fire Barrier Tape compliant UL with good at resistance chemical solvent applied on Insulation for Electronic、 Electrical components, with a variety of colors.  "
-      },
-      "phase3": {
-        "title": "Special Insulation material and foaming material",
-        "content": "Insulation/foaming material with better on sealing、insulation and EMI Shielding is suitable on Power Supply、Hard Disk Drive、TV and Security cameras、Printed Circuit Board、Laptop and various business machines."
-      },
-      "phase4": {
-        "title": "Conductive Material、Conductive Fabric and Copper/Aluminum Foil",
-        "content": "We provide various of metal conduction product, such as Copper Foil、Aluminum Foil and Alloy copper. Also, we have Conductive Fabric、Conductive gasket、conductive adhesive as well."
-      },
-      "phase5": {
-        "title": "Design and Manufacture Insulation Material compliant UL applied in electronics and electric appliance",
-        "content": ""
-      },
-      "phase6": {
-        "title": "Copper (Aluminum) Foil Back Adhesive Processing, Manufacturing",
-        "content": ""
-      },
-      "phase7": {
-        "title": "Absorber",
-        "content": "EMC and suppress the internal noise of RF are the best solutions in wireless and high frequency epoch."
-      },
-      "phase8": {
-        "title": "Metal Conduction Antenna、EMI、Nickel Plate cladding",
-        "content": "Copper Foil、Aluminum Foil、Alloy copper and Nickel sheet."
-      }
+    "tll": {
+      "title": "張力整平線(TLL)",
+      "phase1": "Tension Levelling Line",
+      "phase2": "為將鋼板表面整平，獲得更好的表面平坦度及調整機械性質。"
     },
-    "rba": {
-      "title": "RBA",
-      "content": "RESPONSIBLE BUSINESS ALLIANCE CODE OF CONDUCT <br> The Responsible Business Alliance (RBA), formerly the Electronic Industry Citizenship Coalition (EICC), Code of Conduct establishes standards to ensure that working conditions in the electronics industry or industries in which electronics is a key component and its supply chains are safe, that workers are treated with respect and dignity, and that business operations are environmentally responsible and conducted ethically."
-    },
-    "workerPolicy": {
-      "title": "Human rights policy of labors",
-      "content": "<b>Li Yun</b> will notify our employees about their human rights, including the basic laws and regulations. We established effective multi-communication mechanisms, wages, and benefits. We offer multi-training opportunities, eliminate forced labor to promote the freely chosen employment. In accordance with Labor Standards Act, <br>Li Yun</b> has abolished child laborers, supporting the physical and psychological well-being of minor laborers. For our employees, we provide annual training and notify employees of their rights by company website and email, to make sure our employees fully understand the contents and the spirit of the RBA policy."
-    },
-    "moralPolicy": {
-      "title": "Ethics policy",
-      "content": "<b>Li Yun</b> ’s employees are forbidden to do any illegal business activities and shall avoid conflicts of interests, accept a personal commission, rebate or any benefits inappropriate in any way."
-    },
-    "enviromentPolicy": {
-      "title": "Environmental health and safety policy",
-      "phase1": "<b>Li Yun</b> promotes environmental management and is committed to providing a healthy and good working environment for our employees.",
-      "phase2": "",
-      "phase3": "",
-      "phase4": "",
-      "phase5": "",
-      "phase6": "",
-      "phase7": ""
-    },
-    "moralMineral": {
-      "title": "Sourcing policy for conflict mineral",
-      "content": "We do not use or work with suppliers who source conflict minerals such as, Tin(Sn), tantalum(Ta), tungsten(W), gold(Au) from the Democratic Republic of Congo or any illegal mining activities. We request our suppliers sign the “Conflict Minerals Reporting Template (CMRT)”, ”Declaration of Metal Conflict-Free”, and ”Letter of commitment of supplier for RBA”, making sure our sourcing satisfies the laws and regulations and satisfies our customers request."
-    },
-    "hsf": {
-      "title": "HSF Policy",
-      "content": "<b>Li Yun</b> acts on the promotion of green purchasing policy, environmental protection, comply with the required of customers and laws and regulations."
+    "sl": {
+      "title": "鋼捲分條線(SL)",
+      "phase1": "Slitting Line",
+      "phase2": "主要功能為依訂單需求將鋼捲分條為各種不同寬度尺寸之窄幅鋼捲"
     }
   },
+  "company": {
+    "title": "關於遠龍",
+    "managePolicy": {
+      "title": "經營方針",
+      "phase1": "/assets/img/company_intro_left.webp",
+      "phase2": "/assets/img/company_intro_right.webp"
+    },
+    "companyIntro": {
+      "title": "關於遠龍",
+      "phase1": "遠龍不銹鋼股份有限公司成立於2005年，座落於台灣高雄，隸屬遠東集團所有，為冷軋不銹鋼供應商，年產能13萬噸，產品銷售世界四十餘國。<br/>遠龍不銹鋼全面執行品質管理系統，落實持續改善的精神，不斷提升品質與生產力，產品深獲顧客信賴與肯定。<br/>遠龍不銹鋼以2050年達到淨零排放為目標，透過各項能源管理措施，以實際行動做好節約減碳，讓公司逐步邁向成為低碳的綠色企業，為地球永續盡一份心力。"
+    },
+    "coreValue":{
+      "title": "核心價值",
+      "phase1": "始終秉持集團價值觀「誠、勤、樸、慎、創新」，以精湛技藝與態度在企業永續的道路上不懈努力，展現人本、信賴、務實、創新的核心價值。<br/>1.人本-重視員工需求與發展,善盡企業社會責任。<br/>2.信賴-成為客戶值得信賴的夥伴,成就彼此的成功。<br/>3.務實-腳踏實地,堅持到底,專注過程,做好每件事。<br/>4.創新-跨領域學習,勇於突破,持續改善,提升品質。"
+    },
+    "view":{
+      "title": "使命願景",
+      "phase1": "<p>以「製造高品質低碳排的冷軋不銹鋼」為使命，「成為業界首選，綠色低碳冷軋不銹鋼供應商」為願景。</p>"
+    },
+    "contact": {
+      "title": "遠龍不銹鋼股份有限公司",
+      "phase1": "業務類型：OEM製造商出口商/代理批發商增值經銷商",
+      "phase2": "主要產品: 300 及 400系列不銹鋼",
+      "phase3": "ISO和/或其他安全/質量認證：ISO 9001、ISO 50001、ISO 45001、ISO 14001、ISO 14064、ISO 14067、CNS 45001、ISO/IEC 17025、IATF 16949、JQA JIS G4305、BIS IS 6911"
+    }
+  },
+  "quality":{
+    "title": "品質政策",
+    "cert": {
+      "title": "ISO 9001、JIS mark及IATF 16949 品質政策",
+      "phase1": "在秉持品質政策的意念下，我們全面執行ISO 9001品質管理系統、JIS Q1001符合性評估 - 符合日本產業標準的認證 – 一般認證指引及IATF 16949汽車業品質管理系統等相關作業標準來架構品質管理系統。提升不銹鋼專業能力及服務品質，並秉持持續改善精神提升品質與生產力，達到顧客滿意的水準。我們承諾會依據品質政策建立品質目標，並在符合顧客及法令要求基礎下，進行各項改善措施以持續改善品質管理系統。"
+    },
+    "policy": {
+      "title": "ISO 9001品質管理系統/IATF 16949汽車認證系統品質政策",
+      "phase1": "/assets/img/quality_left.webp",
+      "phase2": "/assets/img/quality_right.webp"
+    },
+    "lab": {
+      "title": "實驗室品質政策",
+      "phase1": "在秉持品質政策的意念下，我們全面執行ISO 9001及ISO/IEC 17025 品質管理系統。提升不銹鋼專業能力及服務品質，並秉持持續改善精神提升品質與生產力，達到顧客滿意的水準。我們承諾會建立品質政策建立品質目標，並在符合顧客及法令要求基礎下，進行各項改善措施以持續改善品質管理系統。",
+      "phase2": "ISO/IEC 17025 遠龍實驗室(編號：3537) 品質政策：以公正、獨立、透明的原則，提供有效率及信賴的測試服務。"
+    }
+  },
+  "cert":{
+    "title": "標準認證",
+    "lists": {
+      "title": "國際標準品質認證",
+      "phase1": "遠龍在產品品質上展現堅持，製造符合 ISO、JIS、EN、ASTM 及 CNS 等國際標準製程產品。遠龍更擁有專屬的品檢實驗室，定期接受 TAF 認證合格，透過產品自檢確保一致性的品質水準。",
+      "iso9001": "ISO 9001  2015版(20240426-20270425)_品質管理系統",
+      "iso5001": "ISO 50001 2018版(20201118-20231118)_能源管理系統",
+      "iso45001": "ISO 45001  2018版(20220729-20250708)_職業安全衛生管理系統",
+      "cns45001_1": "TOSHMS   CNS 45001：2018(1110729-1140707)_台灣職業衛生管理系統",
+      "cns45001_2": "TOSHMS   CNS 45001：2018(1110729-1140707)_台灣職業衛生管理系統",
+      "iso14001": "ISO 14001  2015版(20220729-20250721)_環境管理系統",
+      "iso14064": "ISO 14064-1 2018版(20220810)溫室氣體查驗聲明書",
+      "iso14067": "ISO 14067 2018版(20230306-20250305)碳足跡查證聲明書",
+      "iso17025": "ISO/IEC 17025：2017；CNS17025：2018 實驗室認證證書",
+      "iatf16949": "IATF 16949 2016版(20240426-20270425)_汽車品質管理系統驗證",
+      "bis-is-6911": "BIS IS 6911",
+      "cns8499": "CNS 8499",
+      "jis4305": "JQA JIS G 4305",
+      "cns17025": "ISO/IEC 17025：2017；CNS17025：2018 實驗室認證證書",
+      "iso14046_ch": "ISO 14046(2014版)-中文",
+      "iso14046_en": "ISO 14046(2014版)-英文"
+    }
+  },
+  "recurit": {
+    "title": "人才招募",
+    "coreValues": {
+      "title": "公司核心價值",
+      "content": "我們秉持合作、誠信、專業、當責的核心價值，致力於在每一個環節中提供卓越的服務。"
+    },
+    "teamwork": {
+      "title": "團隊合作",
+      "content": "在我們的公司，每位成員都是團隊的一部分。我們鼓勵相互支持與交流，共同面對挑戰"
+    },
+    "inclusiveEnvironment": {
+      "title": "包容性環境",
+      "content": "我們重視多樣性，努力營造一個包容的工作環境。歡迎不同背景與觀點的人才來到我們的團隊。"
+    },
+    "personalGrowth": {
+      "title": "個人成長",
+      "content": "我們相信優秀的人才是公司最重要的資產。提供多樣的培訓課程與明確的晉升管道，幫助每位成員在職業上不斷成長。"
+    },
+    "workLifeBalance": {
+      "title": "工作生活平衡",
+      "content": "彈性工作時間，支持工作與生活的平衡。"
+    },
+    "joinUs": {
+      "title": "加入我們",
+      "content": "如果您想成為這個充滿活力和多元化的團隊一員，現在就加入我們！請主動投履歷。"
+    },
+    "benefits": {
+      "title": "員工福利",
+      "salary": {
+        "title": "薪資獎金制度",
+        "content1": "保障年薪約14.5個月(全薪計算)：中秋節獎金(半薪)、端午獎金(半薪)、年終加考勤獎金(約1.5個月)。",
+        "content2": "非固定獎金：產銷獎金、產銷保留獎金。",
+        "content3": "考核獎金：每年考核一次，提供完善的升遷考核制度。"
+      },
+      "welfare": {
+        "title": "職工福利委員會",
+        "content1": "禮券發放：四節禮券(春節、勞動節、端午、中秋)、生日禮券、每年結餘禮券發放回饋。",
+        "content2": "補助費用：婚喪喜慶補助、子女教育補助、旅遊補助、急難救助補助。"
+      },
+      "companyBenefits": {
+        "title": "公司福利項目",
+        "content": "員工健康檢查、提供員工制服、提供員工廠內停車位(免費)、親子旅遊活動、員工旅遊、讀書會、社團活動、聖誕活動(移工同樂會)、尾牙活動、員工榮退歡送會。"
+      },
+      "insurance": {
+        "title": "員工保險",
+        "content": "勞健保、職保、團保、勞退提撥。"
+      },
+      "training": {
+        "title": "教育訓練",
+        "content": "新進人員訓練、職能訓練、通識教育、OJT教育訓練。"
+      }
+    },
+    "viewJobs": "檢視人力資源需求"
+  },
   "contact": {
-    "heading": "If you have any questions or suggestions, please complete the form and send them to us.",
-    "title": "Contact Inquiry",
-    "name": "Name",
-    "company": "Company/Organization",
-    "phone": "Phone",
+    "heading": "如果您有任何問題或建議，歡迎填寫以下表格聯繫我們。",
+    "title": "聯絡詢價",
+    "name": "姓名",
+    "company": "公司/單位",
+    "phone": "聯絡電話",
     "email": "E-mail",
-    "content": "Message Content",
-    "askingPrice": "Product for Inquiry",
-    "submit": "Submit",
-    "success": "Your message has been sent successfully. We will contact you as soon as possible. Thank you!",
-    "successTitle": "Message Sent Successfully",
-    "close": "close",
-    "isSending": "Sending",
-    "askingPriceEmpty": "You can find the product you want to inquire about on the product introduction page and contact us by adding it to the inquiry form."
+    "content": "訊息內容",
+    "askingPrice": "您的詢價產品",
+    "submit": "確認送出",
+    "success": "您的訊息已成功送出，我們將盡快與您聯繫，謝謝！",
+    "successTitle": "訊息送出成功",
+    "close": "關閉",
+    "isSending": "訊息送出中",
+    "askingPriceEmpty": "您可以在產品介紹頁面裡找到你想詢價的產品，並且加入詢價表單與我們聯絡。"
+  },
+  "common": {
+    "openMenu": "開啟分類選單",
+    "mainFunc": "主要功能"
   }
 }
